--- a/7.html
+++ b/7.html
@@ -153,7 +153,7 @@ body::before {
             <a href="https://discord.gg/xajPSeswW8" target="_blank">
                 <i class="fa-brands fa-discord"></i>
             </a>
-            <a href="https://www.instagram.com/outbleedd/" target="_blank">
+            <a href="https://www.instagram.com/x_n7v/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="https://www.tiktok.com/@gutcanvas" target="_blank">
